--- a/SolarBLE/SolarBLE.Windows/pages/hub/hub.html
+++ b/SolarBLE/SolarBLE.Windows/pages/hub/hub.html
@@ -17,7 +17,7 @@
         <header aria-label="Header content" role="banner">
             <button class="backbutton" data-win-control="WinJS.UI.BackButton"></button>
             <h1 class="titlearea win-type-ellipsis">
-                <span class="pagetitle">SolarBLE</span>
+                <span class="pagetitle">Solar Buddy</span>
             </h1>
         </header>
 
