--- a/SolarBLE/SolarBLE.Shared/pages/hub/section1Page.html
+++ b/SolarBLE/SolarBLE.Shared/pages/hub/section1Page.html
@@ -7,9 +7,10 @@
 <body>
     <div class="fragment section1page">
         <section aria-label="Main content" role="main">
-            <img src="/images/gray.png" />
-            <div class="title label-extralarge" data-win-res="{ textContent: 'Section1Title' }"></div>
-            <div class="subtext label-medium" data-win-res="{ textContent: 'Section1Subtext' }"></div>
+            <img src="/images/meter.png" />
+
+            <div class="title label-extralarge" data-win-res="{ textContent: 'Section1Title' }"></div><div id="spnPwr">&nbsp;</div>
+            <div class="subtext label-medium" data-win-res="{ textContent: 'Section1Subtext' }"></div><div id="spnUse">&nbsp;</div>
             <div class="label-mediummid">
                 <span data-win-res="{ textContent: 'Section1Description' }"></span>
                 <span data-win-res="{ textContent: 'Section1Description' }"></span>
