Updated help function, paving the way for fetailed information about the system

--- a/SolarBLE/SolarBLE.Shared/pages/hub/section1Page.html
+++ b/SolarBLE/SolarBLE.Shared/pages/hub/section1Page.html
@@ -8,7 +8,7 @@
     <div class="fragment section1page">
         <section aria-label="Main content" role="main">
             <img src="/images/meter.png" />
-
+            <div id="pwrPin">&nbsp;</div><div id="spnDial">&nbsp;</div>
             <div class="title label-extralarge" data-win-res="{ textContent: 'Section1Title' }"></div><div id="spnPwr">&nbsp;</div>
             <div class="subtext label-medium" data-win-res="{ textContent: 'Section1Subtext' }"></div><div id="spnUse">&nbsp;</div>
             <div class="label-mediummid">
