--- a/SolarBLE/SolarBLE.Shared/pages/hub/section4Page.html
+++ b/SolarBLE/SolarBLE.Shared/pages/hub/section4Page.html
@@ -8,12 +8,12 @@
     <div class="fragment section1page">
         <section aria-label="Main content" role="main">
             <div class="top-image-row">
-                <img src="/images/gray.png" />
+                <img id="imgMainSect4" src="/images/particle.gif" />
             </div>
             <div class="sub-image-row">
-                <img src="/images/gray.png" />
-                <img src="/images/gray.png" />
-                <img src="/images/gray.png" />
+                <img id="img1sect4" src="/images/carbonFoot.png" />
+                <img id="img2sect4" src="/images/trophy.png" />
+                <img id="img3sect4" src="/images/girl.jpg" />
             </div>
             <div class="subtext label-medium" data-win-res="{ textContent: 'DescriptionText' }"></div>
             <div class="label-mediummid">
