Added element that holds the amp return

--- a/SolarBLE/SolarBLE.Shared/pages/hub/section2Page.html
+++ b/SolarBLE/SolarBLE.Shared/pages/hub/section2Page.html
@@ -8,7 +8,7 @@
     <div class="fragment section2page">
         <section aria-label="Main content" role="main">
             <div class="item-title label-medium" data-win-res="{ textContent: 'Section2ItemTitle' }"></div><div id="pnIn">&nbsp;</div>
-            <div class="article-header label-extralarge" data-win-res="{ textContent: 'Section2Subtext' }"></div>
+            <div class="article-header label-extralarge" data-win-res="{ textContent: 'Section2Subtext' }"></div><div id="ampIn">&nbsp;</div>
             <div class="subtitle label-medium" data-win-res="{ textContent: 'Section2ItemSubTitle' }"></div>
             <div class="label-mediummid">
                 <span data-win-res="{ textContent: 'Section2Description' }"></span>
